Refactor product and sale management to use consistent primary key naming conventions and improve code readability

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -14,7 +14,10 @@
 }
 
 header {
-    @apply bg-neutral-100;
+    @apply bg-neutral-100 border-b-2 border-gray-200 mb-8;
+    @apply shadow-lg shadow-neutral-600;
+    @apply flex flex-row justify-between items-center;
+    @apply text-neutral-800;
 }
 
 body {
@@ -37,24 +40,23 @@ a {
 button {
     @apply text-red-400 whitespace-nowrap cursor-pointer 
     container max-w-full justify-self-center 
-    border p-1
+    border p-1 mb-0.5 mt-0.5
     hover:bg-gradient-to-t hover:bg-amber-100 hover:to-50%;
 }
 
 main {
-    @apply justify-self-center 
-     min-h-screen max-h-fit min-w-8/10 max-w-9/10
-     p-5
-     bg-white
-     border-l-1 border-r-1 outline-2 shadow-xl shadow-neutral-600;
+    @apply justify-self-center min-h-screen max-h-fit min-w-8/10 max-w-9/10 p-5
+    bg-white shadow-xl shadow-neutral-600;
 }
 
 .content {
     @apply container flex flex-col items-center  rounded-2xl p-5 m-5 border-2 max-w-5/10 ;
+    @apply bg-white border-gray-200 shadow-lg shadow-neutral-600;
 }
 
     .content div {
         @apply flex flex-row justify-around;
+        
     }
 
 /* Rounded containers */
@@ -69,22 +71,27 @@ main {
 
 .list-table {
     @apply border-2 rounded-2xl max-w-20 min-w-full bg-white border-gray-200;
+    @apply shadow-lg shadow-neutral-600 m-1;
 }
 
     .list-table thead tr th {
         @apply py-2 px-4 border-b;
+        @apply text-center text-lg font-semibold;
     }
 
     .list-table tbody tr {
         @apply bg-blend-darken;
+        @apply hover:bg-gradient-to-t hover:bg-amber-100 hover:to-50%;
     }
 
         .list-table tbody tr td {
             @apply py-2 px-4 border-b text-center;
+            @apply text-sm;
         }
 
 .cart {
     @apply container flex flex-col gap-5 min-w-max items-center rounded-l-2xl  shadow-2xl p-10;
+    
 }
 .cart-header {
     @apply border
